; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_addressOK.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_addressOK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PGSQL_AF_INET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @addressOK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @addressOK(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8, align 1
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @PGSQL_AF_INET, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 32, i32* %10, align 4
  store i32 4, i32* %11, align 4
  br label %18

17:                                               ; preds = %3
  store i32 128, i32* %10, align 4
  store i32 16, i32* %11, align 4
  br label %18

18:                                               ; preds = %17, %16
  %19 = load i32, i32* %6, align 4
  %20 = load i32, i32* %10, align 4
  %21 = icmp sle i32 %19, %20
  %22 = zext i1 %21 to i32
  %23 = call i32 @Assert(i32 %22)
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* %10, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %18
  store i32 1, i32* %4, align 4
  br label %62

28:                                               ; preds = %18
  %29 = load i32, i32* %6, align 4
  %30 = sdiv i32 %29, 8
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* %6, align 4
  %32 = srem i32 %31, 8
  store i32 %32, i32* %9, align 4
  store i8 -1, i8* %12, align 1
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %28
  %36 = load i32, i32* %9, align 4
  %37 = load i8, i8* %12, align 1
  %38 = zext i8 %37 to i32
  %39 = ashr i32 %38, %36
  %40 = trunc i32 %39 to i8
  store i8 %40, i8* %12, align 1
  br label %41

41:                                               ; preds = %35, %28
  br label %42

42:                                               ; preds = %58, %41
  %43 = load i32, i32* %8, align 4
  %44 = load i32, i32* %11, align 4
  %45 = icmp slt i32 %43, %44
  br i1 %45, label %46, label %61

46:                                               ; preds = %42
  %47 = load i8*, i8** %5, align 8
  %48 = load i32, i32* %8, align 4
  %49 = sext i32 %48 to i64
  %50 = getelementptr inbounds i8, i8* %47, i64 %49
  %51 = load i8, i8* %50, align 1
  %52 = zext i8 %51 to i32
  %53 = load i8, i8* %12, align 1
  %54 = zext i8 %53 to i32
  %55 = and i32 %52, %54
  %56 = icmp ne i32 %55, 0
  br i1 %56, label %57, label %58

57:                                               ; preds = %46
  store i32 0, i32* %4, align 4
  br label %62

58:                                               ; preds = %46
  store i8 -1, i8* %12, align 1
  %59 = load i32, i32* %8, align 4
  %60 = add nsw i32 %59, 1
  store i32 %60, i32* %8, align 4
  br label %42

61:                                               ; preds = %42
  store i32 1, i32* %4, align 4
  br label %62

62:                                               ; preds = %61, %57, %27
  %63 = load i32, i32* %4, align 4
  ret i32 %63
}

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
